
EXTRA_DIST = loadraster1.testcase \
	loadraster2.testcase \
	loadraster3.testcase \
	loadraster4.testcase \
	loadraster5.testcase \
	loadraster6.testcase \
	loadraster7.testcase \
	loadraster8.testcase \
	loadraster9.testcase \
	loadraster10.testcase \
	loadraster11.testcase \
	loadraster12.testcase \
	loadraster13.testcase \
	loadraster14.testcase \
	loadraster15.testcase \
	loadraster16.testcase \
	loadraster17.testcase \
	loadraster18.testcase \
	loadraster19.testcase \
	loadraster20.testcase \
	loadraster21.testcase \
	loadraster22.testcase \
	loadraster23.testcase \
	loadraster24.testcase \
	loadrasterdir1.testcase \
	loadrasterdir2.testcase \
	loadrasterdir3.testcase \
	loadrasterdir4.testcase \
	loadrasterdir5.testcase \
	loadrasterdir6.testcase \
	loadrasterdir7.testcase \
	loadrasterdir8.testcase \
	loadrasterdir9.testcase \
	loadrasterdir10.testcase \
	loadrasterdir11.testcase \
	loadrasterdir12.testcase \
	loadrasterdir13.testcase \
	loadrasterdir14.testcase \
	loadrasterdir15.testcase \
	loadrasterdir16.testcase \
	loadrasterdir17.testcase \
	loadrasterdir18.testcase \
	loadrasterdir19.testcase \
	loadrasterdir20.testcase \
	loadrasterdir21.testcase \
	loadrasterdir22.testcase \
	loadrasterdir23.testcase \
	loadrasterdir24.testcase \
	loadrasterdir25.testcase \
	loadrasterdir26.testcase \
	loadrasterdir27.testcase \
	loadrasterdir28.testcase \
	loadrasterwms1.testcase \
	loadrasterwms2.testcase \
	loadrasterwms3.testcase \
	loadrasterwms4.testcase \
	loadrasterwms5.testcase \
	loadrasterwms6.testcase \
	loadrasterwms7.testcase \
	loadrasterwms8.testcase \
	loadrasterwms9.testcase \
	loadrasterwms10.testcase \
	loadrasterwms11.testcase \
	loadrasterwms12.testcase \
	loadrasterwms13.testcase \
	loadrasterwms14.testcase \
	loadrasterwms15.testcase \
	loadrasterwms16.testcase \
	loadrasterwms17.testcase \
	loadrasterwms18.testcase \
	loadrasterwms19.testcase \
	writeascii1.testcase \
	writeascii2.testcase \
	writeascii3.testcase \
	writeascii4.testcase \
	writeascii5.testcase \
	writeascii6.testcase \
	writeascii7.testcase \
	writeascii9.testcase \
	writeascii10.testcase \
	writeascii11.testcase \
	writeascii12.testcase \
	writeascii13.testcase \
	writeascii14.testcase \
	writeascii15.testcase \
	writeascii16.testcase \
	writeascii17.testcase \
	writeascii18.testcase \
	writebandtiff1.testcase \
	writebandtiff2.testcase \
	writebandtiff3.testcase \
	writebandtiff4.testcase \
	writebandtiff5.testcase \
	writebandtiff6.testcase \
	writebandtiff7.testcase \
	writebandtiff8.testcase \
	writebandtiff9.testcase \
	writebandtiff10.testcase \
	writebandtiff11.testcase \
	writebandtiff12.testcase \
	writebandtiff13.testcase \
	writebandtiff14.testcase \
	writebandtiff15.testcase \
	writebandtiff16.testcase \
	writebandtiff17.testcase \
	writebandtiff18.testcase \
	writebandtiff19.testcase \
	writebandtiff20.testcase \
	writebandtiff21.testcase \
	writebandtiff22.testcase \
	writebandtiff23.testcase \
	writebandtiff24.testcase \
	writebandtiff25.testcase \
	writebandtiff26.testcase \
	writebandtiff27.testcase \
	writebandgeotiff1.testcase \
	writebandgeotiff2.testcase \
	writebandgeotiff3.testcase \
	writebandgeotiff4.testcase \
	writebandgeotiff5.testcase \
	writebandgeotiff6.testcase \
	writebandgeotiff7.testcase \
	writebandgeotiff8.testcase \
	writebandgeotiff9.testcase \
	writebandgeotiff10.testcase \
	writebandgeotiff11.testcase \
	writebandgeotiff12.testcase \
	writebandgeotiff13.testcase \
	writebandgeotiff14.testcase \
	writebandgeotiff15.testcase \
	writebandgeotiff16.testcase \
	writebandgeotiff17.testcase \
	writebandgeotiff18.testcase \
	writebandgeotiff19.testcase \
	writebandgeotiff20.testcase \
	writebandgeotiff21.testcase \
	writebandgeotiff22.testcase \
	writebandgeotiff23.testcase \
	writebandgeotiff24.testcase \
	writebandgeotiff25.testcase \
	writebandgeotiff26.testcase \
	writebandgeotiff27.testcase \
	writebandgeotiff28.testcase \
	writemonotiff1.testcase \
	writemonotiff2.testcase \
	writemonotiff3.testcase \
	writemonotiff4.testcase \
	writemonotiff5.testcase \
	writemonotiff6.testcase \
	writemonotiff7.testcase \
	writemonotiff8.testcase \
	writemonotiff9.testcase \
	writemonotiff10.testcase \
	writemonotiff11.testcase \
	writemonotiff12.testcase \
	writemonotiff13.testcase \
	writemonotiff14.testcase \
	writemonotiff15.testcase \
	writemonotiff16.testcase \
	writemonotiff17.testcase \
	writemonotiff18.testcase \
	writemonotiff19.testcase \
	writemonotiff20.testcase \
	writemonotiff21.testcase \
	writemonogeotiff1.testcase \
	writemonogeotiff2.testcase \
	writemonogeotiff3.testcase \
	writemonogeotiff4.testcase \
	writemonogeotiff5.testcase \
	writemonogeotiff6.testcase \
	writemonogeotiff7.testcase \
	writemonogeotiff8.testcase \
	writemonogeotiff9.testcase \
	writemonogeotiff10.testcase \
	writemonogeotiff11.testcase \
	writemonogeotiff12.testcase \
	writemonogeotiff13.testcase \
	writemonogeotiff14.testcase \
	writemonogeotiff15.testcase \
	writemonogeotiff16.testcase \
	writemonogeotiff17.testcase \
	writemonogeotiff18.testcase \
	writemonogeotiff19.testcase \
	writemonogeotiff20.testcase \
	writemonogeotiff21.testcase \
	writemonogeotiff22.testcase \
	writegeotiff1.testcase \
	writegeotiff2.testcase \
	writegeotiff3.testcase \
	writegeotiff4.testcase \
	writegeotiff5.testcase \
	writegeotiff6.testcase \
	writegeotiff7.testcase \
	writegeotiff8.testcase \
	writegeotiff9.testcase \
	writegeotiff10.testcase \
	writegeotiff11.testcase \
	writegeotiff12.testcase \
	writegeotiff13.testcase \
	writegeotiff14.testcase \
	writegeotiff15.testcase \
	writegeotiff16.testcase \
	writegeotiff17.testcase \
	writegeotiff18.testcase \
	writegeotiff19.testcase \
	writejpeg1.testcase \
	writejpeg2.testcase \
	writejpeg3.testcase \
	writejpeg4.testcase \
	writejpeg5.testcase \
	writejpeg6.testcase \
	writejpeg7.testcase \
	writejpeg8.testcase \
	writejpeg9.testcase \
	writejpeg10.testcase \
	writejpeg11.testcase \
	writejpeg12.testcase \
	writejpeg13.testcase \
	writejpeg14.testcase \
	writejpeg15.testcase \
	writetiff1.testcase \
	writetiff2.testcase \
	writetiff3.testcase \
	writetiff4.testcase \
	writetiff5.testcase \
	writetiff6.testcase \
	writetiff7.testcase \
	writetiff8.testcase \
	writetiff9.testcase \
	writetiff10.testcase \
	writetiff11.testcase \
	writetiff12.testcase \
	writetiff13.testcase \
	writetiff14.testcase \
	writetiff15.testcase \
	writetiff16.testcase \
	writetiff17.testcase \
	writetiff18.testcase



