
EXTRA_DIST = createcov_16_mband1.testcase \
	createcov_16_mband_deflate.testcase \
	createcov_16_mband_fax3.testcase \
	createcov_16_mband_fax4.testcase \
	createcov_16_mband_gif.testcase \
	createcov_16_mband_jpeg.testcase \
	createcov_16_mband_lzma.testcase \
	createcov_16_mband_png.testcase \
	createcov_16_mband.testcase \
	createcov_16_mband_webp1.testcase \
	createcov_16_mband_webp2.testcase \
	createcov_1bit_mono1.testcase \
	createcov_1bit_mono_deflate.testcase \
	createcov_1bit_mono_fax3.testcase \
	createcov_1bit_mono_fax4.testcase \
	createcov_1bit_mono_gif.testcase \
	createcov_1bit_mono_jpeg.testcase \
	createcov_1bit_mono_lzma.testcase \
	createcov_1bit_mono_png.testcase \
	createcov_1bit_mono.testcase \
	createcov_1bit_mono_webp1.testcase \
	createcov_1bit_mono_webp2.testcase \
	createcov_1bit_palette1.testcase \
	createcov_1bit_palette_gif.testcase \
	createcov_1bit_palette_png.testcase \
	createcov_1bit_palette.testcase \
	createcov_2bit_gray1.testcase \
	createcov_2bit_gray_gif.testcase \
	createcov_2bit_gray_jpeg.testcase \
	createcov_2bit_gray_png.testcase \
	createcov_2bit_gray.testcase \
	createcov_2bit_gray_webp1.testcase \
	createcov_2bit_gray_webp2.testcase \
	createcov_2bit_palette1.testcase \
	createcov_2bit_palette_gif.testcase \
	createcov_2bit_palette_png.testcase \
	createcov_2bit_palette.testcase \
	createcov_4bit_gray1.testcase \
	createcov_4bit_gray_gif.testcase \
	createcov_4bit_gray_jpeg.testcase \
	createcov_4bit_gray_png.testcase \
	createcov_4bit_gray.testcase \
	createcov_4bit_gray_webp1.testcase \
	createcov_4bit_gray_webp2.testcase \
	createcov_4bit_palette1.testcase \
	createcov_4bit_palette_gif.testcase \
	createcov_4bit_palette_png.testcase \
	createcov_4bit_palette.testcase \
	createcov_8_mband1.testcase \
	createcov_8_mband_deflate.testcase \
	createcov_8_mband_fax3.testcase \
	createcov_8_mband_fax4.testcase \
	createcov_8_mband_gif.testcase \
	createcov_8_mband_jpeg.testcase \
	createcov_8_mband_lzma.testcase \
	createcov_8_mband_png.testcase \
	createcov_8_mband.testcase \
	createcov_8_mband_webp1.testcase \
	createcov_8_mband_webp2.testcase \
	createcov_double_grid1.testcase \
	createcov_double_grid_deflate.testcase \
	createcov_double_grid_lzma.testcase \
	createcov_double_grid.testcase \
	createcov_err1.testcase \
	createcov_err2.testcase \
	createcov_err3.testcase \
	createcov_err4.testcase \
	createcov_err5.testcase \
	createcov_err6.testcase \
	createcov_err7.testcase \
	createcov_err8.testcase \
	createcov_err9.testcase \
	createcov_err10.testcase \
	createcov_err11.testcase \
	createcov_err12.testcase \
	createcov_err13.testcase \
	createcov_err14.testcase \
	createcov_err15.testcase \
	createcov_err16.testcase \
	createcov_err17.testcase \
	createcov_float_grid1.testcase \
	createcov_float_grid_deflate.testcase \
	createcov_float_grid_lzma.testcase \
	createcov_float_grid.testcase \
	createcov_int16_grid1.testcase \
	createcov_int16_grid_deflate.testcase \
	createcov_int16_grid_lzma.testcase \
	createcov_int16_grid.testcase \
	createcov_int32_grid1.testcase \
	createcov_int32_grid_deflate.testcase \
	createcov_int32_grid_gif.testcase \
	createcov_int32_grid_jpeg.testcase \
	createcov_int32_grid_lzma.testcase \
	createcov_int32_grid_png.testcase \
	createcov_int32_grid.testcase \
	createcov_int32_grid_webp1.testcase \
	createcov_int32_grid_webp2.testcase \
	createcov_int8_grid1.testcase \
	createcov_int8_grid_deflate.testcase \
	createcov_int8_grid_lzma.testcase \
	createcov_int8_grid.testcase \
	createcov_uint16_grid1.testcase \
	createcov_uint16_grid_deflate.testcase \
	createcov_uint16_grid_lzma.testcase \
	createcov_uint16_grid.testcase \
	createcov_uint32_grid1.testcase \
	createcov_uint32_grid_deflate.testcase \
	createcov_uint32_grid_lzma.testcase \
	createcov_uint32_grid.testcase \
	createcov_uint8_gray_deflate.testcase \
	createcov_uint8_gray_fax3.testcase \
	createcov_uint8_gray_fax4.testcase \
	createcov_uint8_gray_gif.testcase \
	createcov_uint8_gray_jpeg.testcase \
	createcov_uint8_gray_lzma.testcase \
	createcov_uint8_gray_png.testcase \
	createcov_uint8_gray.testcase \
	createcov_uint8_gray_webp1.testcase \
	createcov_uint8_gray_webp2.testcase \
	createcov_uint8_grid1.testcase \
	createcov_uint8_grid_deflate.testcase \
	createcov_uint8_grid_lzma.testcase \
	createcov_uint8_grid.testcase \
	createcov_uint8_palette_deflate.testcase \
	createcov_uint8_palette_fax3.testcase \
	createcov_uint8_palette_fax4.testcase \
	createcov_uint8_palette_gif.testcase \
	createcov_uint8_palette_jpeg.testcase \
	createcov_uint8_palette_lzma.testcase \
	createcov_uint8_palette_png.testcase \
	createcov_uint8_palette.testcase \
	createcov_uint8_palette_webp1.testcase \
	createcov_uint8_palette_webp2.testcase \
	createcov_uint8_rgb1.testcase \
	createcov_uint8_rgb_deflate.testcase \
	createcov_uint8_rgb_fax3.testcase \
	createcov_uint8_rgb_fax4.testcase \
	createcov_uint8_rgb_gif.testcase \
	createcov_uint8_rgb_jpeg.testcase \
	createcov_uint8_rgb_lzma.testcase \
	createcov_uint8_rgb_png.testcase \
	createcov_uint8_rgb.testcase \
	createcov_uint8_rgb_webp1.testcase \
	createcov_uint8_rgb_webp2.testcase \
	createpixel1.testcase \
	createpixel2.testcase \
	createpixel3.testcase \
	createpixel4.testcase \
	createpixel5.testcase \
	createpixel6.testcase \
	createpixel7.testcase \
	createpixel8.testcase \
	createpixel9.testcase \
	createpixel10.testcase \
	createpixel11.testcase \
	createpixel12.testcase \
	createpixel13.testcase \
	deletesection1.testcase \
	deletesection2.testcase \
	deletesection3.testcase \
	deletesection4.testcase \
	depyramidize1.testcase \
	depyramidize2.testcase \
	depyramidize3.testcase \
	depyramidize4.testcase \
	depyramidize5.testcase \
	depyramidize6.testcase \
	depyramidize7.testcase \
	depyramidize8.testcase \
	depyramidize9.testcase \
	depyramidize10.testcase \
	depyramidize11.testcase \
	depyramidize12.testcase \
	dropcoverage1.testcase \
	dropcoverage2.testcase \
	dropcoverage3.testcase \
	getmapimage1.testcase \
	getmapimage2.testcase \
	getmapimage3.testcase \
	getmapimage4.testcase \
	getmapimage5.testcase \
	getmapimage6.testcase \
	getmapimage7.testcase \
	getmapimage8.testcase \
	getmapimage9.testcase \
	getmapimage10.testcase \
	getmapimage1.testcase \
	getmapimage12.testcase \
	getmapimage13.testcase \
	getmapimage14.testcase \
	getmapimage15.testcase \
	getmapimage16.testcase \
	getmapimage17.testcase \
	getmapimage18.testcase \
	getmapimage19.testcase \
	getmapimage20.testcase \
	gettileimage1.testcase \
	gettileimage2.testcase \
	gettileimage3.testcase \
	gettileimage4.testcase \
	gettileimage5.testcase \
	gettileimage6.testcase \
	getbandhistogram1.testcase \
	getbandhistogram2.testcase \
	getbandhistogram3.testcase \
	getbandhistogram4.testcase \
	getbandtileimage1.testcase \
	getbandtileimage2.testcase \
	getbandtileimage3.testcase \
	getbandtileimage4.testcase \
	getbandtileimage5.testcase \
	getbandtileimage6.testcase \
	getbandtileimage7.testcase \
	getbandtileimage8.testcase \
	getbandtileimage9.testcase \
	getbandtileimage10.testcase \
	getbandtileimage11.testcase \
	getbandtileimage12.testcase \
	getmonotileimage1.testcase \
	getmonotileimage2.testcase \
	getmonotileimage3.testcase \
	getmonotileimage4.testcase \
	getmonotileimage5.testcase \
	getmonotileimage6.testcase \
	getmonotileimage7.testcase \
	getmonotileimage8.testcase \
	getpalettenumentries1.testcase \
	getpalettenumentries2.testcase \
	getpalettecolorentry1.testcase \
	getpalettecolorentry2.testcase \
	getpalettecolorentry3.testcase \
	getpixelnumbands1.testcase \
	getpixelnumbands2.testcase \
	getpixelnumbands3.testcase \
	getpixelnumbands4.testcase \
	getpixelnumbands5.testcase \
	getpixelnumbands6.testcase \
	getpixeltype1.testcase \
	getpixeltype2.testcase \
	getpixeltype3.testcase \
	getpixeltype4.testcase \
	getpixeltype5.testcase \
	getpixeltype6.testcase \
	getpixeltype7.testcase \
	getpixeltype8.testcase \
	getpixeltype9.testcase \
	getpixeltype10.testcase \
	getpixeltype11.testcase \
	getpixelvalue1.testcase \
	getpixelvalue2.testcase \
	getpixelvalue3.testcase \
	getpixelvalue4.testcase \
	getpixelvalue5.testcase \
	getpixelvalue6.testcase \
	getpixelvalue7.testcase \
	getpixelvalue8.testcase \
	getpixelvalue9.testcase \
	getpixelvalue10.testcase \
	getpixelsampletype1.testcase \
	getpixelsampletype2.testcase \
	getpixelsampletype3.testcase \
	getpixelsampletype4.testcase \
	getpixelsampletype5.testcase \
	getpixelsampletype6.testcase \
	getpixelsampletype7.testcase \
	getpixelsampletype8.testcase \
	getpixelsampletype9.testcase \
	getpixelsampletype10.testcase \
	getpixelsampletype11.testcase \
	getpixelsampletype12.testcase \
	getpixelsampletype13.testcase \
	getpixelsampletype14.testcase \
	getpixelsampletype15.testcase \
	getpixelsampletype16.testcase \
	getrasterstats1.testcase \
	getrasterstats2.testcase \
	getrasterstats3.testcase \
	getrasterstats4.testcase \
	getrasterstats5.testcase \
	getrasterstats6.testcase \
	getrasterstats7.testcase \
	getrasterstats8.testcase \
	getrasterstats9.testcase \
	getrasterstats10.testcase \
	getrasterstats11.testcase \
	getrasterstats12.testcase \
	getrasterstats13.testcase \
	getrasterstats14.testcase \
	getrasterstats15.testcase \
	getrasterstats16.testcase \
	getrasterstats17.testcase \
	getrasterstats18.testcase \
	getrasterstats19.testcase \
	getrasterstats20.testcase \
	getrasterstats21.testcase \
	getrasterstats22.testcase \
	getrasterstats23.testcase \
	getrasterstats24.testcase \
	getrasterstats25.testcase \
	getrasterstats26.testcase \
	exportraw1.testcase \
	exportraw2.testcase \
	exportraw3.testcase \
	exportraw4.testcase \
	exportraw5.testcase \
	exportraw6.testcase \
	exportraw7.testcase \
	exportraw8.testcase \
	exportsectraw1.testcase \
	exportsectraw2.testcase \
	exportsectraw3.testcase \
	exportsectraw4.testcase \
	exportsectraw5.testcase \
	exportsectraw6.testcase \
	exportsectraw7.testcase \
	exportsectraw8.testcase \
	exportsectraw9.testcase \
	importraw1.testcase \
	importraw2.testcase \
	importraw3.testcase \
	importraw4.testcase \
	importraw5.testcase \
	importraw6.testcase \
	importraw7.testcase \
	importraw8.testcase \
	importraw9.testcase \
	importraw10.testcase \
	ispixelopaque1.testcase \
	ispixelopaque2.testcase \
	ispixelopaque3.testcase \
	ispixelopaque4.testcase \
	ispixelopaque5.testcase \
	ispixeltransparent1.testcase \
	ispixeltransparent2.testcase \
	ispixeltransparent3.testcase \
	ispixeltransparent4.testcase \
	ispixeltransparent5.testcase \
	isvalidpalette1.testcase \
	isvalidpalette2.testcase \
	isvalidpalette3.testcase \
	isvalidpalette4.testcase \
	isvalidpalette5.testcase \
	isvalidpalette6.testcase \
	isvalidpalette7.testcase \
	isvalidpalette8.testcase \
	isvalidpalette9.testcase \
	isvalidpalette10.testcase \
	isvalidpixel1.testcase \
	isvalidpixel2.testcase \
	isvalidpixel3.testcase \
	isvalidpixel4.testcase \
	isvalidpixel5.testcase \
	isvalidpixel6.testcase \
	isvalidpixel7.testcase \
	isvalidpixel8.testcase \
	isvalidpixel9.testcase \
	isvalidpixel10.testcase \
	isvalidpixel11.testcase \
	isvalidpixel12.testcase \
	isvalidpixel13.testcase \
	isvalidpixel14.testcase \
	isvalidpixel15.testcase \
	isvalidpixel16.testcase \
	isvalidpixel17.testcase \
	isvalidpixel18.testcase \
	isvalidpixel19.testcase \
	isvalidpixel20.testcase \
	isvalidpixel21.testcase \
	isvalidpixel22.testcase \
	isvalidpixel23.testcase \
	isvalidstats1.testcase \
	isvalidstats2.testcase \
	isvalidstats3.testcase \
	isvalidstats4.testcase \
	isvalidstats5.testcase \
	isvalidstats6.testcase \
	isvalidstats7.testcase \
	isvalidstats8.testcase \
	isvalidstats9.testcase \
	isvalidstats10.testcase \
	isvalidstats11.testcase \
	isvalidstats12.testcase \
	isvalidstats13.testcase \
	isvalidstats14.testcase \
	isvalidstats15.testcase \
	isvalidstats16.testcase \
	isvalidstats17.testcase \
	isvalidstats18.testcase \
	isvalidtile1.testcase \
	isvalidtile2.testcase \
	isvalidtile3.testcase \
	isvalidtile4.testcase \
	setpixelopaque1.testcase \
	paletteequals1.testcase \
	paletteequals2.testcase \
	paletteequals3.testcase \
	pixelequals1.testcase \
	pixelequals2.testcase \
	pixelequals3.testcase \
	pixelequals4.testcase \
	pixelequals5.testcase \
	pixelequals6.testcase \
	pixelequals7.testcase \
	pixelequals8.testcase \
	pyramidize1.testcase \
	pyramidize2.testcase \
	pyramidize3.testcase \
	pyramidize4.testcase \
	pyramidize5.testcase \
	pyramidize6.testcase \
	pyramidize7.testcase \
	pyramidize8.testcase \
	pyramidize9.testcase \
	pyramidize10.testcase \
	pyramidize11.testcase \
	pyramidize12.testcase \
	pyramidize13.testcase \
	pyramidize14.testcase \
	pyramidize15.testcase \
	pyramidize16.testcase \
	pyramidize17.testcase \
	pyramidize18.testcase \
	pyramidize19.testcase \
	setcoverageinfos1.testcase \
	setcoverageinfos2.testcase \
	setcoverageinfos3.testcase \
	setcoverageinfos4.testcase \
	setpalettecolorentry1.testcase \
	setpalettecolorentry2.testcase \
	setpalettecolorentry3.testcase \
	setpalettecolorentry4.testcase \
	setpixelopaque2.testcase \
	setpixeltransparent1.testcase \
	setpixeltransparent2.testcase \
	setpixelvalue1.testcase \
	setpixelvalue2.testcase \
	setpixelvalue3.testcase \
	setpixelvalue4.testcase \
	setpixelvalue5.testcase \
	setpixelvalue6.testcase \
	setpixelvalue7.testcase \
	setpixelvalue8.testcase \
	setpixelvalue9.testcase \
	setpixelvalue10.testcase \
	setpixelvalue11.testcase \
	setpixelvalue12.testcase \
	setpixelvalue13.testcase \
	setpixelvalue14.testcase \
	setpixelvalue15.testcase \
	setpixelvalue16.testcase \
	setpixelvalue17.testcase \
	setpixelvalue18.testcase \
	setpixelvalue19.testcase \
	setpixelvalue20.testcase \
	setpixelvalue21.testcase \
	setpixelvalue22.testcase \
	setpixelvalue23.testcase \
	setpixelvalue24.testcase \
	setpixelvalue25.testcase \
	testpixel_1bit_mono.testcase \
	testpixel_1bit_plt.testcase \
	testpixel_2bit_gray.testcase \
	testpixel_2bit_plt.testcase \
	testpixel_4bit_gray.testcase \
	testpixel_4bit_plt.testcase \
	testpixel_double_grid.testcase \
	testpixel_float_grid.testcase \
	testpixel_int16_grid.testcase \
	testpixel_int32_grid.testcase \
	testpixel_int8_grid.testcase \
	testpixel_uint16_grid.testcase \
	testpixel_uint16_mband.testcase \
	testpixel_uint16_rgb.testcase \
	testpixel_uint32_grid.testcase \
	testpixel_uint8_gray.testcase \
	testpixel_uint8_grid.testcase \
	testpixel_uint8_mband.testcase \
	testpixel_uint8_plt.testcase \
	testpixel_uint8_rgb.testcase \
	targetcpu.testcase 
	version.testcase 
