
EXTRA_DIST = exportfont1.testcase \
	exportfont2.testcase \
	exportfont3.testcase \
	exportfont4.testcase \
	exportfont9.testcase \
	exportfont10.testcase \
	exportfont11.testcase \
	exportfont12.testcase \
	exportfont13.testcase \
	loadfont1.testcase \
	loadfont2.testcase \
	loadfont3.testcase \
	loadfont4.testcase \
	loadfont5.testcase \
	loadraster1.testcase \
	loadraster2.testcase \
	loadraster3.testcase \
	loadraster4.testcase \
	loadraster5.testcase \
	loadraster6.testcase \
	loadraster7.testcase \
	loadraster8.testcase \
	loadraster9.testcase \
	loadraster10.testcase \
	loadraster11.testcase \
	loadraster12.testcase \
	loadraster13.testcase \
	loadraster14.testcase \
	loadraster15.testcase \
	loadraster16.testcase \
	loadraster17.testcase \
	loadraster18.testcase \
	loadraster19.testcase \
	loadraster20.testcase \
	loadraster21.testcase \
	loadraster22.testcase \
	loadraster23.testcase \
	loadraster24.testcase \
	loadrasterdir1.testcase \
	loadrasterdir2.testcase \
	loadrasterdir3.testcase \
	loadrasterdir4.testcase \
	loadrasterdir5.testcase \
	loadrasterdir6.testcase \
	loadrasterdir7.testcase \
	loadrasterdir8.testcase \
	loadrasterdir9.testcase \
	loadrasterdir10.testcase \
	loadrasterdir11.testcase \
	loadrasterdir12.testcase \
	loadrasterdir13.testcase \
	loadrasterdir14.testcase \
	loadrasterdir15.testcase \
	loadrasterdir16.testcase \
	loadrasterdir17.testcase \
	loadrasterdir18.testcase \
	loadrasterdir19.testcase \
	loadrasterdir20.testcase \
	loadrasterdir21.testcase \
	loadrasterdir22.testcase \
	loadrasterdir23.testcase \
	loadrasterdir24.testcase \
	loadrasterdir25.testcase \
	loadrasterdir26.testcase \
	loadrasterdir27.testcase \
	loadrasterdir28.testcase \
	loadrasterwms1.testcase \
	loadrasterwms2.testcase \
	loadrasterwms3.testcase \
	loadrasterwms4.testcase \
	loadrasterwms5.testcase \
	loadrasterwms6.testcase \
	loadrasterwms7.testcase \
	loadrasterwms8.testcase \
	loadrasterwms9.testcase \
	loadrasterwms10.testcase \
	loadrasterwms11.testcase \
	loadrasterwms12.testcase \
	loadrasterwms13.testcase \
	loadrasterwms14.testcase \
	loadrasterwms15.testcase \
	loadrasterwms16.testcase \
	loadrasterwms17.testcase \
	loadrasterwms18.testcase \
	loadrasterwms19.testcase \
	writeascii1.testcase \
	writeascii2.testcase \
	writeascii3.testcase \
	writeascii4.testcase \
	writeascii5.testcase \
	writeascii6.testcase \
	writeascii7.testcase \
	writeascii9.testcase \
	writeascii10.testcase \
	writeascii11.testcase \
	writeascii12.testcase \
	writeascii13.testcase \
	writeascii14.testcase \
	writeascii15.testcase \
	writeascii16.testcase \
	writeascii17.testcase \
	writeascii18.testcase \
	writesectionascii1.testcase \
	writesectionascii2.testcase \
	writesectionascii3.testcase \
	writesectionascii4.testcase \
	writesectionascii5.testcase \
	writesectionascii6.testcase \
	writesectionascii7.testcase \
	writesectionascii9.testcase \
	writesectionascii10.testcase \
	writesectionascii11.testcase \
	writesectionascii12.testcase \
	writesectionascii13.testcase \
	writesectionascii14.testcase \
	writesectionascii15.testcase \
	writesectionascii16.testcase \
	writesectionascii17.testcase \
	writesectionascii18.testcase \
	writesectionascii18.testcase \
	writendviascii1.testcase \
	writendviascii2.testcase \
	writendviascii3.testcase \
	writendviascii4.testcase \
	writendviascii5.testcase \
	writendviascii6.testcase \
	writendviascii7.testcase \
	writendviascii8.testcase \
	writendviascii9.testcase \
	writendviascii10.testcase \
	writendviascii11.testcase \
	writendviascii12.testcase \
	writendviascii13.testcase \
	writendviascii14.testcase \
	writendviascii15.testcase \
	writendviascii16.testcase \
	writendviascii17.testcase \
	writendviascii18.testcase \
	writesectionndviascii1.testcase \
	writesectionndviascii2.testcase \
	writesectionndviascii3.testcase \
	writesectionndviascii4.testcase \
	writesectionndviascii5.testcase \
	writesectionndviascii6.testcase \
	writesectionndviascii7.testcase \
	writesectionndviascii8.testcase \
	writesectionndviascii9.testcase \
	writesectionndviascii10.testcase \
	writesectionndviascii11.testcase \
	writesectionndviascii12.testcase \
	writesectionndviascii13.testcase \
	writesectionndviascii14.testcase \
	writesectionndviascii15.testcase \
	writesectionndviascii16.testcase \
	writesectionndviascii17.testcase \
	writesectionndviascii18.testcase \
	writesectionndviascii19.testcase \
	writesectionndviascii20.testcase \
	writebandtiff1.testcase \
	writebandtiff2.testcase \
	writebandtiff3.testcase \
	writebandtiff4.testcase \
	writebandtiff5.testcase \
	writebandtiff6.testcase \
	writebandtiff7.testcase \
	writebandtiff8.testcase \
	writebandtiff9.testcase \
	writebandtiff10.testcase \
	writebandtiff11.testcase \
	writebandtiff12.testcase \
	writebandtiff13.testcase \
	writebandtiff14.testcase \
	writebandtiff15.testcase \
	writebandtiff16.testcase \
	writebandtiff17.testcase \
	writebandtiff18.testcase \
	writebandtiff19.testcase \
	writebandtiff20.testcase \
	writebandtiff21.testcase \
	writebandtiff22.testcase \
	writebandtiff23.testcase \
	writebandtiff24.testcase \
	writebandtiff25.testcase \
	writebandtiff26.testcase \
	writebandtiff27.testcase \
	writebandtifftfw1.testcase \
	writebandtifftfw2.testcase \
	writebandtifftfw3.testcase \
	writebandtifftfw4.testcase \
	writebandtifftfw5.testcase \
	writebandtifftfw6.testcase \
	writebandtifftfw7.testcase \
	writebandtifftfw8.testcase \
	writebandtifftfw9.testcase \
	writebandtifftfw10.testcase \
	writebandtifftfw11.testcase \
	writebandtifftfw12.testcase \
	writebandtifftfw13.testcase \
	writebandtifftfw14.testcase \
	writebandtifftfw15.testcase \
	writebandtifftfw16.testcase \
	writebandtifftfw17.testcase \
	writebandtifftfw18.testcase \
	writebandtifftfw19.testcase \
	writebandtifftfw20.testcase \
	writebandtifftfw21.testcase \
	writebandtifftfw22.testcase \
	writebandtifftfw23.testcase \
	writebandtifftfw24.testcase \
	writebandtifftfw25.testcase \
	writebandtifftfw26.testcase \
	writebandtifftfw27.testcase \
	writesectionbandtiff1.testcase \
	writesectionbandtiff2.testcase \
	writesectionbandtiff3.testcase \
	writesectionbandtiff4.testcase \
	writesectionbandtiff5.testcase \
	writesectionbandtiff6.testcase \
	writesectionbandtiff7.testcase \
	writesectionbandtiff8.testcase \
	writesectionbandtiff9.testcase \
	writesectionbandtiff10.testcase \
	writesectionbandtiff11.testcase \
	writesectionbandtiff12.testcase \
	writesectionbandtiff13.testcase \
	writesectionbandtiff14.testcase \
	writesectionbandtiff15.testcase \
	writesectionbandtiff16.testcase \
	writesectionbandtiff17.testcase \
	writesectionbandtiff18.testcase \
	writesectionbandtiff19.testcase \
	writesectionbandtiff20.testcase \
	writesectionbandtiff21.testcase \
	writesectionbandtiff22.testcase \
	writesectionbandtiff23.testcase \
	writesectionbandtiff24.testcase \
	writesectionbandtiff25.testcase \
	writesectionbandtiff26.testcase \
	writesectionbandtiff27.testcase \
	writesectionbandtiff28.testcase \
	writesectionbandtifftfw1.testcase \
	writesectionbandtifftfw2.testcase \
	writesectionbandtifftfw3.testcase \
	writesectionbandtifftfw4.testcase \
	writesectionbandtifftfw5.testcase \
	writesectionbandtifftfw6.testcase \
	writesectionbandtifftfw7.testcase \
	writesectionbandtifftfw8.testcase \
	writesectionbandtifftfw9.testcase \
	writesectionbandtifftfw10.testcase \
	writesectionbandtifftfw11.testcase \
	writesectionbandtifftfw12.testcase \
	writesectionbandtifftfw13.testcase \
	writesectionbandtifftfw14.testcase \
	writesectionbandtifftfw15.testcase \
	writesectionbandtifftfw16.testcase \
	writesectionbandtifftfw17.testcase \
	writesectionbandtifftfw18.testcase \
	writesectionbandtifftfw19.testcase \
	writesectionbandtifftfw20.testcase \
	writesectionbandtifftfw21.testcase \
	writesectionbandtifftfw22.testcase \
	writesectionbandtifftfw23.testcase \
	writesectionbandtifftfw24.testcase \
	writesectionbandtifftfw25.testcase \
	writesectionbandtifftfw26.testcase \
	writesectionbandtifftfw27.testcase \
	writesectionbandtifftfw28.testcase \
	writebandgeotiff1.testcase \
	writebandgeotiff2.testcase \
	writebandgeotiff3.testcase \
	writebandgeotiff4.testcase \
	writebandgeotiff5.testcase \
	writebandgeotiff6.testcase \
	writebandgeotiff7.testcase \
	writebandgeotiff8.testcase \
	writebandgeotiff9.testcase \
	writebandgeotiff10.testcase \
	writebandgeotiff11.testcase \
	writebandgeotiff12.testcase \
	writebandgeotiff13.testcase \
	writebandgeotiff14.testcase \
	writebandgeotiff15.testcase \
	writebandgeotiff16.testcase \
	writebandgeotiff17.testcase \
	writebandgeotiff18.testcase \
	writebandgeotiff19.testcase \
	writebandgeotiff20.testcase \
	writebandgeotiff21.testcase \
	writebandgeotiff22.testcase \
	writebandgeotiff23.testcase \
	writebandgeotiff24.testcase \
	writebandgeotiff25.testcase \
	writebandgeotiff26.testcase \
	writebandgeotiff27.testcase \
	writebandgeotiff28.testcase \
	writesectionbandgeotiff1.testcase \
	writesectionbandgeotiff2.testcase \
	writesectionbandgeotiff3.testcase \
	writesectionbandgeotiff4.testcase \
	writesectionbandgeotiff5.testcase \
	writesectionbandgeotiff6.testcase \
	writesectionbandgeotiff7.testcase \
	writesectionbandgeotiff8.testcase \
	writesectionbandgeotiff9.testcase \
	writesectionbandgeotiff10.testcase \
	writesectionbandgeotiff11.testcase \
	writesectionbandgeotiff12.testcase \
	writesectionbandgeotiff13.testcase \
	writesectionbandgeotiff14.testcase \
	writesectionbandgeotiff15.testcase \
	writesectionbandgeotiff16.testcase \
	writesectionbandgeotiff17.testcase \
	writesectionbandgeotiff18.testcase \
	writesectionbandgeotiff19.testcase \
	writesectionbandgeotiff20.testcase \
	writesectionbandgeotiff21.testcase \
	writesectionbandgeotiff22.testcase \
	writesectionbandgeotiff23.testcase \
	writesectionbandgeotiff24.testcase \
	writesectionbandgeotiff25.testcase \
	writesectionbandgeotiff26.testcase \
	writesectionbandgeotiff27.testcase \
	writesectionbandgeotiff28.testcase \
	writesectionbandgeotiff29.testcase \
	writemonotiff1.testcase \
	writemonotiff2.testcase \
	writemonotiff3.testcase \
	writemonotiff4.testcase \
	writemonotiff5.testcase \
	writemonotiff6.testcase \
	writemonotiff7.testcase \
	writemonotiff8.testcase \
	writemonotiff9.testcase \
	writemonotiff10.testcase \
	writemonotiff11.testcase \
	writemonotiff12.testcase \
	writemonotiff13.testcase \
	writemonotiff14.testcase \
	writemonotiff15.testcase \
	writemonotiff16.testcase \
	writemonotiff17.testcase \
	writemonotiff18.testcase \
	writemonotiff19.testcase \
	writemonotiff20.testcase \
	writemonotiff21.testcase \
	writemonotifftfw1.testcase \
	writemonotifftfw2.testcase \
	writemonotifftfw3.testcase \
	writemonotifftfw4.testcase \
	writemonotifftfw5.testcase \
	writemonotifftfw6.testcase \
	writemonotifftfw7.testcase \
	writemonotifftfw8.testcase \
	writemonotifftfw9.testcase \
	writemonotifftfw10.testcase \
	writemonotifftfw11.testcase \
	writemonotifftfw12.testcase \
	writemonotifftfw13.testcase \
	writemonotifftfw14.testcase \
	writemonotifftfw15.testcase \
	writemonotifftfw16.testcase \
	writemonotifftfw17.testcase \
	writemonotifftfw18.testcase \
	writemonotifftfw19.testcase \
	writemonotifftfw20.testcase \
	writemonotifftfw21.testcase \
	writesectionmonotiff1.testcase \
	writesectionmonotiff2.testcase \
	writesectionmonotiff3.testcase \
	writesectionmonotiff4.testcase \
	writesectionmonotiff5.testcase \
	writesectionmonotiff6.testcase \
	writesectionmonotiff7.testcase \
	writesectionmonotiff8.testcase \
	writesectionmonotiff9.testcase \
	writesectionmonotiff10.testcase \
	writesectionmonotiff11.testcase \
	writesectionmonotiff12.testcase \
	writesectionmonotiff13.testcase \
	writesectionmonotiff14.testcase \
	writesectionmonotiff15.testcase \
	writesectionmonotiff16.testcase \
	writesectionmonotiff17.testcase \
	writesectionmonotiff18.testcase \
	writesectionmonotiff19.testcase \
	writesectionmonotiff20.testcase \
	writesectionmonotiff21.testcase \
	writesectionmonotiff22.testcase \
	writesectionmonotifftfw1.testcase \
	writesectionmonotifftfw2.testcase \
	writesectionmonotifftfw3.testcase \
	writesectionmonotifftfw4.testcase \
	writesectionmonotifftfw5.testcase \
	writesectionmonotifftfw6.testcase \
	writesectionmonotifftfw7.testcase \
	writesectionmonotifftfw8.testcase \
	writesectionmonotifftfw9.testcase \
	writesectionmonotifftfw10.testcase \
	writesectionmonotifftfw11.testcase \
	writesectionmonotifftfw12.testcase \
	writesectionmonotifftfw13.testcase \
	writesectionmonotifftfw14.testcase \
	writesectionmonotifftfw15.testcase \
	writesectionmonotifftfw16.testcase \
	writesectionmonotifftfw17.testcase \
	writesectionmonotifftfw18.testcase \
	writesectionmonotifftfw19.testcase \
	writesectionmonotifftfw20.testcase \
	writesectionmonotifftfw21.testcase \
	writesectionmonotifftfw22.testcase \
	writemonogeotiff1.testcase \
	writemonogeotiff2.testcase \
	writemonogeotiff3.testcase \
	writemonogeotiff4.testcase \
	writemonogeotiff5.testcase \
	writemonogeotiff6.testcase \
	writemonogeotiff7.testcase \
	writemonogeotiff8.testcase \
	writemonogeotiff9.testcase \
	writemonogeotiff10.testcase \
	writemonogeotiff11.testcase \
	writemonogeotiff12.testcase \
	writemonogeotiff13.testcase \
	writemonogeotiff14.testcase \
	writemonogeotiff15.testcase \
	writemonogeotiff16.testcase \
	writemonogeotiff17.testcase \
	writemonogeotiff18.testcase \
	writemonogeotiff19.testcase \
	writemonogeotiff20.testcase \
	writemonogeotiff21.testcase \
	writemonogeotiff22.testcase \
	writesectionmonogeotiff1.testcase \
	writesectionmonogeotiff2.testcase \
	writesectionmonogeotiff3.testcase \
	writesectionmonogeotiff4.testcase \
	writesectionmonogeotiff5.testcase \
	writesectionmonogeotiff6.testcase \
	writesectionmonogeotiff7.testcase \
	writesectionmonogeotiff8.testcase \
	writesectionmonogeotiff9.testcase \
	writesectionmonogeotiff10.testcase \
	writesectionmonogeotiff11.testcase \
	writesectionmonogeotiff12.testcase \
	writesectionmonogeotiff13.testcase \
	writesectionmonogeotiff14.testcase \
	writesectionmonogeotiff15.testcase \
	writesectionmonogeotiff16.testcase \
	writesectionmonogeotiff17.testcase \
	writesectionmonogeotiff18.testcase \
	writesectionmonogeotiff19.testcase \
	writesectionmonogeotiff20.testcase \
	writesectionmonogeotiff21.testcase \
	writesectionmonogeotiff22.testcase \
	writesectionmonogeotiff23.testcase \
	writegeotiff1.testcase \
	writegeotiff2.testcase \
	writegeotiff3.testcase \
	writegeotiff4.testcase \
	writegeotiff5.testcase \
	writegeotiff6.testcase \
	writegeotiff7.testcase \
	writegeotiff8.testcase \
	writegeotiff9.testcase \
	writegeotiff10.testcase \
	writegeotiff11.testcase \
	writegeotiff12.testcase \
	writegeotiff13.testcase \
	writegeotiff14.testcase \
	writegeotiff15.testcase \
	writegeotiff16.testcase \
	writegeotiff17.testcase \
	writegeotiff18.testcase \
	writegeotiff19.testcase \
	writesectiongeotiff1.testcase \
	writesectiongeotiff2.testcase \
	writesectiongeotiff3.testcase \
	writesectiongeotiff4.testcase \
	writesectiongeotiff5.testcase \
	writesectiongeotiff6.testcase \
	writesectiongeotiff7.testcase \
	writesectiongeotiff8.testcase \
	writesectiongeotiff9.testcase \
	writesectiongeotiff10.testcase \
	writesectiongeotiff11.testcase \
	writesectiongeotiff12.testcase \
	writesectiongeotiff13.testcase \
	writesectiongeotiff14.testcase \
	writesectiongeotiff15.testcase \
	writesectiongeotiff16.testcase \
	writesectiongeotiff17.testcase \
	writesectiongeotiff18.testcase \
	writesectiongeotiff19.testcase \
	writesectiongeotiff20.testcase \
	writejpeg1.testcase \
	writejpeg2.testcase \
	writejpeg3.testcase \
	writejpeg4.testcase \
	writejpeg5.testcase \
	writejpeg6.testcase \
	writejpeg7.testcase \
	writejpeg8.testcase \
	writejpeg9.testcase \
	writejpeg10.testcase \
	writejpeg11.testcase \
	writejpeg12.testcase \
	writejpeg13.testcase \
	writejpeg14.testcase \
	writejpeg15.testcase \
	writejpegjgw1.testcase \
	writejpegjgw2.testcase \
	writejpegjgw3.testcase \
	writejpegjgw4.testcase \
	writejpegjgw5.testcase \
	writejpegjgw6.testcase \
	writejpegjgw7.testcase \
	writejpegjgw8.testcase \
	writejpegjgw9.testcase \
	writejpegjgw10.testcase \
	writejpegjgw11.testcase \
	writejpegjgw12.testcase \
	writejpegjgw13.testcase \
	writejpegjgw14.testcase \
	writejpegjgw15.testcase \
	writesectionjpeg1.testcase \
	writesectionjpeg2.testcase \
	writesectionjpeg3.testcase \
	writesectionjpeg4.testcase \
	writesectionjpeg5.testcase \
	writesectionjpeg6.testcase \
	writesectionjpeg7.testcase \
	writesectionjpeg8.testcase \
	writesectionjpeg9.testcase \
	writesectionjpeg10.testcase \
	writesectionjpeg11.testcase \
	writesectionjpeg12.testcase \
	writesectionjpeg13.testcase \
	writesectionjpeg14.testcase \
	writesectionjpeg15.testcase \
	writesectionjpeg16.testcase \
	writesectionjpegjgw1.testcase \
	writesectionjpegjgw2.testcase \
	writesectionjpegjgw3.testcase \
	writesectionjpegjgw4.testcase \
	writesectionjpegjgw5.testcase \
	writesectionjpegjgw6.testcase \
	writesectionjpegjgw7.testcase \
	writesectionjpegjgw8.testcase \
	writesectionjpegjgw9.testcase \
	writesectionjpegjgw10.testcase \
	writesectionjpegjgw11.testcase \
	writesectionjpegjgw12.testcase \
	writesectionjpegjgw13.testcase \
	writesectionjpegjgw14.testcase \
	writesectionjpegjgw15.testcase \
	writesectionjpegjgw16.testcase \
	writetiff1.testcase \
	writetiff2.testcase \
	writetiff3.testcase \
	writetiff4.testcase \
	writetiff5.testcase \
	writetiff6.testcase \
	writetiff7.testcase \
	writetiff8.testcase \
	writetiff9.testcase \
	writetiff10.testcase \
	writetiff11.testcase \
	writetiff12.testcase \
	writetiff13.testcase \
	writetiff14.testcase \
	writetiff15.testcase \
	writetiff16.testcase \
	writetiff17.testcase \
	writetiff18.testcase \
	writesectiontiff1.testcase \
	writesectiontiff2.testcase \
	writesectiontiff3.testcase \
	writesectiontiff4.testcase \
	writesectiontiff5.testcase \
	writesectiontiff6.testcase \
	writesectiontiff7.testcase \
	writesectiontiff8.testcase \
	writesectiontiff9.testcase \
	writesectiontiff10.testcase \
	writesectiontiff11.testcase \
	writesectiontiff12.testcase \
	writesectiontiff13.testcase \
	writesectiontiff14.testcase \
	writesectiontiff15.testcase \
	writesectiontiff16.testcase \
	writesectiontiff17.testcase \
	writesectiontiff18.testcase \
	writesectiontiff19.testcase \
	writetifftfw1.testcase \
	writetifftfw2.testcase \
	writetifftfw3.testcase \
	writetifftfw4.testcase \
	writetifftfw5.testcase \
	writetifftfw6.testcase \
	writetifftfw7.testcase \
	writetifftfw8.testcase \
	writetifftfw9.testcase \
	writetifftfw10.testcase \
	writetifftfw11.testcase \
	writetifftfw12.testcase \
	writetifftfw13.testcase \
	writetifftfw14.testcase \
	writetifftfw15.testcase \
	writetifftfw16.testcase \
	writetifftfw17.testcase \
	writetifftfw18.testcase \
	writesectiontifftfw1.testcase \
	writesectiontifftfw2.testcase \
	writesectiontifftfw3.testcase \
	writesectiontifftfw4.testcase \
	writesectiontifftfw5.testcase \
	writesectiontifftfw6.testcase \
	writesectiontifftfw7.testcase \
	writesectiontifftfw8.testcase \
	writesectiontifftfw9.testcase \
	writesectiontifftfw10.testcase \
	writesectiontifftfw11.testcase \
	writesectiontifftfw12.testcase \
	writesectiontifftfw13.testcase \
	writesectiontifftfw14.testcase \
	writesectiontifftfw15.testcase \
	writesectiontifftfw16.testcase \
	writesectiontifftfw17.testcase \
	writesectiontifftfw18.testcase \
	writesectiontifftfw19.testcase 



